force-app/main/default/objects/Lab_Order__c/Lab_Order__c.object-meta.xml
<CustomObject>
    <label>Lab Order</label>
    <nameField>
        <displayFormat>LAB-{000000000}</displayFormat>
        <label>Lab Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lab Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>