force-app/main/default/objects/Lab_Order__c/fields/Calendly_Link__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Link__c</fullName>
    <description>This field will display the Opportunity Owner Calendly Link field. If that is null, it will try to fetch Patient Owner Calendly link

- Used for Email Merge Field</description>
    <formula>IF(NOT(ISBLANK(Opportunity__r.Owner.Calendly__CalendlyLink__c)), 
   Opportunity__r.Owner.Calendly__CalendlyLink__c, 
   Patient__r.Owner.Calendly__CalendlyLink__c)</formula>
    <label>Calendly Link</label>
    <type>Text</type>
</CustomField>