force-app/main/default/objects/Lab_Order__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>Captures the date of birth of the patient.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date of birth of the patient</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>