force-app/main/default/objects/Lab_Order__c/fields/Date_Sent_to_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_to_Distribution__c</fullName>
    <description>This field will dictate when the lab order was sent to the distribution provider to ship out the kit. This serves as a key reference point for operational management and reporting purposes, ensuring stakeholders have clear visibility into the timelines of lab order processing.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Sent to Distribution</label>
    <type>Date</type>
</CustomField>