force-app/main/default/objects/Lab_Order__c/fields/Do_Not_Send_Emails__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Send_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is marked as true, emailer flows will not send out emails</description>
    <label>Do Not Send Emails</label>
    <type>Checkbox</type>
</CustomField>