force-app/main/default/objects/Lab_Order__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Stores the first name of the patient</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The first name of the patient</inlineHelpText>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>