force-app/main/default/objects/Lab_Order__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <label>Height (inches)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>