force-app/main/default/objects/Lab_Order__c/fields/Kit_Sent_to_Patient_Date__c.field-meta.xml
<CustomField>
    <fullName>Kit_Sent_to_Patient_Date__c</fullName>
    <description>Automatically populated with the current date when Status Reason is set to &quot;Kit Sent to Patient&quot; on a Lab Order.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date the kit was sent to the patient based on Status Reason change to &quot;Kit Sent to Patient&quot;.</inlineHelpText>
    <label>Kit Sent to Patient Date</label>
    <type>DateTime</type>
</CustomField>