force-app/main/default/objects/Lab_Order__c/fields/Lab_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Lab_Order_Date__c</fullName>
    <description>This is the date used to denote when the API call to the lab was made.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lab Order Date</label>
    <type>DateTime</type>
</CustomField>