force-app/main/default/objects/Lab_Order__c/fields/Lab_Provider_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Lab_Provider_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Helps automations identify the appropriate lab provider configuration for processing the lab order</description>
    <inlineHelpText>This is the lookup that will help automations know the correct lab provider configuration</inlineHelpText>
    <label>Lab Provider Configuration</label>
    <referenceTo>Lab_Provider__c</referenceTo>
    <relationshipLabel>Lab Orders</relationshipLabel>
    <relationshipName>Lab_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>