force-app/main/default/objects/Lab_Order__c/fields/Last_Reship_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reship_Date__c</fullName>
    <description>This field captures the most recent date on which the lab order was reshipped. It&apos;s crucial for tracking the latest activity related to reshipping orders, which can be necessary for various operational reasons, such as correcting shipment errors or fulfilling additional requirements.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Reship Date</label>
    <type>Date</type>
</CustomField>