force-app/main/default/objects/Lab_Order__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the lab order to the patient account</description>
    <inlineHelpText>The patient account link</inlineHelpText>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lab Orders</relationshipLabel>
    <relationshipName>Lab_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>