force-app/main/default/objects/Lab_Order__c/fields/Protocol_Cart_Link__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Cart_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Protocol Cart Link</label>
    <type>Url</type>
</CustomField>