force-app/main/default/objects/Lab_Order__c/fields/Reorder_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Attempt__c</fullName>
    <defaultValue>1</defaultValue>
    <description>This current lab orders Reorder Attempt</description>
    <inlineHelpText>This current lab orders Reorder Attempt</inlineHelpText>
    <label>Reorder Attempt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>