force-app/main/default/objects/Lab_Order__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lab_Order_API_Request_Type</valueSetName>
    </valueSet>
</CustomField>