force-app/main/default/objects/Lab_Order__c/fields/Reship_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Reship_Attempt__c</fullName>
    <defaultValue>1</defaultValue>
    <description>This current lab orders Reship Attempt</description>
    <inlineHelpText>This current lab orders Reship Attempt</inlineHelpText>
    <label>Reship Attempt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>