force-app/main/default/objects/Lab_Order__c/fields/Reship_Order__c.field-meta.xml
<CustomField>
    <fullName>Reship_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is true, Record Trigger - Lab Order - Lab Order Rejected flow will create a new Lab Order when this one is rejected</description>
    <label>Reship Order</label>
    <type>Checkbox</type>
</CustomField>