force-app/main/default/objects/Lab_Order__c/fields/Sample_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>Sample_Collection_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sample Collection Date</label>
    <type>DateTime</type>
</CustomField>