force-app/main/default/objects/Lab_Order__c/fields/Sample_Received_by_Distribution_Date__c.field-meta.xml
<CustomField>
    <fullName>Sample_Received_by_Distribution_Date__c</fullName>
    <description>Automatically populated with the current date when Status Reason is set to &quot;Sample Received by Distribution&quot; on a Lab Order.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date the sample was received by distribution based on Status Reason change to &quot;Sample Received by Distribution&quot;.</inlineHelpText>
    <label>Sample Received by Distribution Date</label>
    <type>DateTime</type>
</CustomField>