force-app/main/default/objects/Lab_Order__c/fields/Sample_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Sample_Received_Date__c</fullName>
    <description>Automatically populated with the current date when Status is set to &quot;Sample Received&quot; on a Lab Order.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date the sample was received based on Status change to &quot;Sample Received&quot;.</inlineHelpText>
    <label>Sample Received Date</label>
    <type>DateTime</type>
</CustomField>