force-app/main/default/objects/Lab_Order__c/fields/Scheduled_Date_to_Be_Submitted_to_Lab__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date_to_Be_Submitted_to_Lab__c</fullName>
    <description>The date the Lab Order will be submitted to the Lab</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Scheduled Date to Be Submitted to Lab</label>
    <type>DateTime</type>
</CustomField>