force-app/main/default/objects/Lab_Order__c/fields/Services_Rendered__c.field-meta.xml
<CustomField>
    <fullName>Services_Rendered__c</fullName>
    <label>Services Rendered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lab_Provided_Services</valueSetName>
    </valueSet>
</CustomField>