force-app/main/default/objects/Lab_Order__c/fields/Shipment_Date_to_Patient__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Date_to_Patient__c</fullName>
    <description>This field will be used to track when an order is in transit. Used to help for reporting purposes and SLA</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipment Date to Patient</label>
    <type>Date</type>
</CustomField>