force-app/main/default/objects/Lab_Order__c/fields/Shipping_Link_to_Patient__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Link_to_Patient__c</fullName>
    <formula>IF(
    TEXT(Shipping_Provider_to_Patient__c) == &quot;Fedex&quot;,&quot;https://www.fedex.com/apps/fedextrack/index.html?tracknumbers=&quot;+Shipping_Number_to_Patient__c+&quot;&amp;cntry_code=us&quot;,
    IF(TEXT(Shipping_Provider_to_Patient__c) == &quot;UPS&quot;,&quot;https://www.ups.com/track?loc=en_US&amp;tracknum=&quot;+Shipping_Number_to_Patient__c+&quot;&amp;requester=WT/trackdetails&quot;,
        IF(TEXT(Shipping_Provider_to_Patient__c) == &quot;DHL&quot;,&quot;https://www.dhl.com/us-en/home/tracking.html?tracking-id=&quot;+Shipping_Number_to_Patient__c,
            IF(TEXT(Shipping_Provider_to_Patient__c) == &quot;USPS&quot;,&quot;https://tools.usps.com/go/TrackConfirmAction?tRef=fullpage&amp;tLc=2&amp;text28777=&amp;tLabels=&quot;+Shipping_Number_to_Patient__c,NULL
            )
        )
    )
)</formula>
    <label>Shipping Link to Patient</label>
    <type>Text</type>
</CustomField>