force-app/main/default/objects/Lab_Order__c/fields/Shipping_Provider_to_Patient__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Provider_to_Patient__c</fullName>
    <label>Shipping Provider to Patient</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Shipping_Providers</valueSetName>
    </valueSet>
</CustomField>