force-app/main/default/objects/Lab_Order__c/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change Lab</fullName>
            </value>
            <value>
                <fullName>Patient Refuned</fullName>
            </value>
            <value>
                <fullName>Non-Supported State</fullName>
            </value>
            <value>
                <fullName>Missing or Incorrect Shipping Details</fullName>
            </value>
            <value>
                <fullName>Provider Invalid</fullName>
            </value>
            <value>
                <fullName>Missing Patient</fullName>
            </value>
            <value>
                <fullName>Sample Invalid</fullName>
            </value>
            <value>
                <fullName>Missing Demographics</fullName>
            </value>
            <value>
                <fullName>Mismatch Demographics</fullName>
            </value>
            <value>
                <fullName>Missing Consent</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Swapped</fullName>
            </value>
            <value>
                <fullName>Reship</fullName>
            </value>
            <value>
                <fullName>Too Many Lab Requests Attempts</fullName>
            </value>
            <value>
                <fullName>Kit Sent To Patient</fullName>
            </value>
            <value>
                <fullName>Patient Received Kit</fullName>
            </value>
            <value>
                <fullName>Sample Received by Distribution</fullName>
            </value>
            <value>
                <fullName>Kit Sent To Lab</fullName>
            </value>
            <value>
                <fullName>Analysis In Progress</fullName>
            </value>
            <value>
                <fullName>Analysis Completed</fullName>
            </value>
            <value>
                <fullName>See Error Message</fullName>
            </value>
            <value>
                <fullName>Supplement Production Started</fullName>
            </value>
            <value>
                <fullName>Pending Fulfillment</fullName>
                <default>true</default>
                <label>Pending Fulfillment</label>
            </value>
            <value>
                <fullName>Report Production Started</fullName>
            </value>
            <value>
                <fullName>Product Sent to Distribution Center</fullName>
            </value>
            <value>
                <fullName>Product Sent to Patient</fullName>
            </value>
            <value>
                <fullName>Missing Kit Id</fullName>
            </value>
            <value>
                <fullName>Stalled</fullName>
            </value>
            <value>
                <fullName>Missing Content</fullName>
                <isActive>false</isActive>
                <label>Missing Content</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>