force-app/main/default/objects/Lab_Order__c/fields/Supplement_Processing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Supplement_Processing_Start_Date__c</fullName>
    <description>Automatically populated with the current date when Status Reason is set to &quot;Supplement Production Started&quot; on a Lab Order.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date the supplement processing started based on Status Reason change to &quot;Supplement Production Started&quot;.</inlineHelpText>
    <label>Supplement Processing Start Date</label>
    <type>DateTime</type>
</CustomField>