force-app/main/default/objects/Lab_Order__c/fields/Total_Number_of_Reorders__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Reorders__c</fullName>
    <defaultValue>1</defaultValue>
    <description>This will be the SUM of how many reorders we have done for all Lab Orders.</description>
    <label>Total Number of Reorders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>