force-app/main/default/objects/Lab_Order__c/fields/Total_Number_of_Reships__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Reships__c</fullName>
    <description>This will be the SUM of how many reships we have done.</description>
    <label>Total Number of Reships</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>