force-app/main/default/objects/Lab_Order__c/listViews/Lab_Orders_Created_Today.listView-meta.xml
<ListView>
    <fullName>Lab_Orders_Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Reason__c</columns>
    <columns>Services_Rendered__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Lab Orders Created Today</label>
</ListView>